kernel/tests/data/invalid/non_strictly_positive_1.ck
data Invalid : Prop where
  | c : (Invalid -> Type) -> Invalid